NULL = 

SUBDIRS = reference

man_MANS = \
	nemo.1 \
	nemo-connect-server.1 \
	$(NULL)

EXTRA_DIST = \
	$(man_MANS) \
	architecture.txt \
	dnd.txt \
	load-states.dia \
	nemo-internals.sxw \
	nemo-internals.pdf \
	nemo-io.txt \
	nemo.faq \
	recommended-books.html \
	smoketests.html \
	state-machines.txt \
	style-guide.html \
	key_mouse_navigation.txt \
	$(NULL)
