NULL = 

SUBDIRS = reference

man_MANS = \
	nautilus.1 \
	nautilus-connect-server.1 \
	$(NULL)

EXTRA_DIST = \
	$(man_MANS) \
	architecture.txt \
	dnd.txt \
	load-states.dia \
	nautilus-internals.sxw \
	nautilus-internals.pdf \
	nautilus-io.txt \
	nautilus.faq \
	recommended-books.html \
	smoketests.html \
	state-machines.txt \
	style-guide.html \
	key_mouse_navigation.txt \
	$(NULL)

-include $(top_srcdir)/git.mk
